Changing links since dockerhub made me

--- a/datawave_jdk/Dockerfile
+++ b/datawave_jdk/Dockerfile
@@ -1,7 +1,7 @@
 FROM azul/zulu-openjdk-centos:8u252
 
-LABEL pull="docker pull alerman/datawave/base-jdk" \
-      run="docker run -it alerman/datawave/base-jdk" \
+LABEL pull="docker pull alerman/datawave-base-jdk" \
+      run="docker run -it alerman/datawave-base-jdk" \
       description="Jboss base with Datawave customizations (Azul Zulu JDK, additional tools installed" \
       name="Jboss Base Image with DATAWAVE customizations" \
       maintainer="Adam Lerman"
@@ -10,6 +10,7 @@ USER root
 
 
 RUN yum -y install deltarpm centos-release-sc && \
+    chmod -R 777 /usr/lib/jvm/zulu-8/bin/* && \
     groupadd -r jboss -g 1000 && \
     useradd -u 1000 -r -g jboss -m -d /opt/jboss -s /sbin/nologin -c "JBoss User" jboss && \
     groupadd -r hadoop && \
@@ -19,7 +20,8 @@ RUN yum -y install deltarpm centos-release-sc && \
 
 ENV JAVA_VERSION=8 \
     JAVA_UPDATE=252 \
-    JAVA_BUILD=1.8.0_252-b14
+    JAVA_BUILD=1.8.0_252-b14 \
+    JAVA_HOME=/usr/lib/jvm/zulu8
 LABEL version="1.8.0_252"
 
 RUN yum update -y && \
